@startuml
' Class Diagram for PfeAziz Application

' User Management
class App_user {
  -Long id
  -String username
  -String password
  -Collection<User_Role> user_roles
  +getAuthorities(): Collection<? extends GrantedAuthority>
  +getPassword(): String
  +getUsername(): String
  +isAccountNonExpired(): boolean
  +isAccountNonLocked(): boolean
  +isCredentialsNonExpired(): boolean
  +isEnabled(): boolean
}

class User_Role {
  -Long id
  -String name
  +getAuthority(): String
}

' Reference Data
class Ilot {
  -Long id
  -String name
  -String description
  -String location
  -List<Machine> machines
  -LocalDateTime createdAt
  -LocalDateTime updatedAt
}

class Machine {
  -Long id
  -String name
  -String type
  -String model
  -String serialNumber
  -Ilot ilot
  -List<Programme> programmes
  -LocalDateTime createdAt
  -LocalDateTime updatedAt
}

class Metier {
  -Long id
  -String name
  -String description
  -String category
  -List<String> requiredSkills
  -LocalDateTime createdAt
  -LocalDateTime updatedAt
}

class Programme {
  -Long id
  -String name
  -String description
  -Integer duration
  -Machine machine
  -LocalDateTime createdAt
  -LocalDateTime updatedAt
}

' Demand Classes
abstract class BaseDemande {
  -Long id
  -String status
  -String startcontrole
  -String finishcontrole
  -String dureeDeLaTache
  -Boolean startClicked
  -Boolean finishClicked
  -Boolean resultatClicked
  -Boolean hidden
}

class Demande {
  -App_user operateur
  -Ilot ilot
  -Metier metier
  -String date
  -String time
  -App_user controleur
  -String etq
  -String defaut
  -Programme programme
  -Boolean urgent
  -String sn
  -String of_demande
  -String nombre_produit_controle
  -String quantite_controle_metier
  -String quantite_non_conforme
}

class DemandeDelegue {
  -String of_demande
  -Ilot ilot
  -Metier metier
  -String date
  -String time
  -App_user controleur
  -String etq
  -String defaut
  -Programme programme
  -Boolean urgent
  -String sn
  -String nombre_produit_controle
  -String quantite_controle_metier
  -String quantite_non_conforme
}

class DemandeFinale {
  -String of_demande
  -Ilot ilot
  -Metier metier
  -String date
  -String time
  -String controleur
  -String etq
  -String defaut
  -String programme
  -Boolean urgent
  -String sn
  -String nombre_produit_controle
  -String quantite_non_conforme
}

class DemandeTe {
  -String operateur
  -String date
  -String time
  -String controleur
  -String machine
  -String dureeAttente
  -String programme
  -Boolean urgent
  -String sn
  -String ilot
}

' Relationships
App_user "1" -- "many" User_Role : has >
Ilot "1" -- "many" Machine : contains >
Machine "1" -- "many" Programme : has >

Demande "many" -- "1" App_user : operateur >
Demande "many" -- "1" App_user : controleur >
Demande "many" -- "1" Ilot : belongs to >
Demande "many" -- "1" Metier : requires >
Demande "many" -- "1" Programme : uses >

DemandeDelegue "many" -- "1" App_user : controleur >
DemandeDelegue "many" -- "1" Ilot : belongs to >
DemandeDelegue "many" -- "1" Metier : requires >
DemandeDelegue "many" -- "1" Programme : uses >

DemandeFinale "many" -- "1" Ilot : belongs to >
DemandeFinale "many" -- "1" Metier : requires >

' Note: The actual implementation doesn't use inheritance, but it would be a good design improvement
note "Note: BaseDemande is a suggested abstract class that could be used to reduce code duplication" as N1
note "Note: There are inconsistencies in the model design - some classes use object references while others use strings for the same concepts" as N2

@enduml
